# neosh

./: Cargo.toml
docs/: README.md
src/: background.rs  command.rs  main.c  main.rs  map.c  map_test.c  neo.h  shell.c  shell.rs  shell_buildin_cd.rs  shell_builtin.c  shell_builtin.rs  shell_builtin_cd.rs  shell_builtin_exit.rs  shell_builtin_export.rs  shell_env.c  shell_exec.c  shell_io.c  shell_io.rs  shell_path.c  shell_process.c  shell_process.rs  shell_state.c  shell_state.rs  split.c  str_ops.c
